--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2080,7 +2080,29 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "282125    lan-кабель кабель высокочастотный парный скрут...\n",
+       "282126    lan-кабель кабель высокочастотный парный скрут...\n",
+       "282127    lan-кабель кабель высокочастотный парный скрут...\n",
+       "282128    lan-кабель кабель высокочастотный парный скрут...\n",
+       "76                  бумажно-пропитать кабель бпи напряжение\n",
+       "                                ...                        \n",
+       "288931                                         провод марка\n",
+       "288930                                         провод марка\n",
+       "288932                                         провод марка\n",
+       "79                        провод самонесущие сип напряжение\n",
+       "75                        провод самонесущие сип напряжение\n",
+       "Name: product_name, Length: 250802, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tokenized_cables = cables[:]['product_name'].apply(lambda x: ' '.join(tokenizer.tokenize(x, remove_numbers=True)))\n",
     "tokenized_cables"
@@ -2088,7 +2110,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1267"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tokenized_cables.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "282125    lan-кабель кабель высокочастотный парный скрут...\n",
+       "282126    lan-кабель кабель высокочастотный парный скрут...\n",
+       "282127    lan-кабель кабель высокочастотный парный скрут...\n",
+       "282128    lan-кабель кабель высокочастотный парный скрут...\n",
+       "76        бумажно-пропитать кабель бпи напряжение иловый...\n",
+       "                                ...                        \n",
+       "288931    провод марка провод самонесущий изолировать не...\n",
+       "288930    провод марка провод самонесущий изолировать не...\n",
+       "288932    провод марка провод самонесущий изолировать не...\n",
+       "79        провод самонесущие сип напряжение защитить про...\n",
+       "75        провод самонесущие сип напряжение самонесущий ...\n",
+       "Name: product_descr, Length: 250802, dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenized_cables_descr = cables[:]['product_descr'].apply(lambda x: ' '.join(tokenizer.tokenize(x, remove_numbers=True)))\n",
+    "tokenized_cables_descr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1418"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tokenized_cables_descr.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized_cables_descr.to_csv(\"tokenized_cables_descr.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
