--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,6 +17,7 @@
     "import gc\n",
     "from data_preparation import *\n",
     "from training import *\n",
+    "from inference import *\n",
     "\n",
     "SEED = 42"
    ]
@@ -29,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "16"
+       "37"
       ]
      },
      "execution_count": 2,
@@ -3332,12 +3333,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = pd.read_csv('dataset_q.csv', dtype={'ktru_2': object, 'ktru_5': object})\n",
     "embeddings = np.load('embeddings_q.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(58620, 600)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings.shape"
    ]
   },
   {
@@ -4056,6 +4077,266 @@
    ],
    "source": [
     "train_tree(dataset, embeddings, index=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(58620, 13)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv('dataset_q.csv', dtype={'ktru_2': object, 'ktru_5': object})\n",
+    "embeddings = np.load('embeddings_q.npy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing prediction function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_classificator(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'27.12.20.000-00000001'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outp = model.predict(embeddings[1])\n",
+    "outp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = int(outp.argmax(-1))\n",
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0.3</th>\n",
+       "      <th>Unnamed: 0.2</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>product_descr</th>\n",
+       "      <th>ktru_code</th>\n",
+       "      <th>ktru_2</th>\n",
+       "      <th>ktru_5</th>\n",
+       "      <th>ktru_8</th>\n",
+       "      <th>ktru_12</th>\n",
+       "      <th>train</th>\n",
+       "      <th>root</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Шкаф с электронными компонентами</td>\n",
+       "      <td>Шкаф с электронными компонентами, Обеспечение ...</td>\n",
+       "      <td>26.51.40.000-00000003</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26.51</td>\n",
+       "      <td>26.51.40</td>\n",
+       "      <td>26.51.40.000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Реле слаботочное электромагнитное РЭС 9</td>\n",
+       "      <td>Реле слаботочное электромагнитное РЭС 9, Слабо...</td>\n",
+       "      <td>27.12.20.000-00000001</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27.12</td>\n",
+       "      <td>27.12.20</td>\n",
+       "      <td>27.12.20.000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Реле электромагнитное РЭС 10</td>\n",
+       "      <td>Реле электромагнитное РЭС 10, Слаботочные элек...</td>\n",
+       "      <td>27.12.20.000-00000001</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27.12</td>\n",
+       "      <td>27.12.20</td>\n",
+       "      <td>27.12.20.000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Реле герконовое РЭС93-Т</td>\n",
+       "      <td>Реле герконовое РЭС93-Т, Слаботочные электрома...</td>\n",
+       "      <td>27.12.20.000-00000001</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27.12</td>\n",
+       "      <td>27.12.20</td>\n",
+       "      <td>27.12.20.000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Реле герконовое РЭС91</td>\n",
+       "      <td>Реле герконовое РЭС91, Слаботочные электромагн...</td>\n",
+       "      <td>27.12.20.000-00000001</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27.12</td>\n",
+       "      <td>27.12.20</td>\n",
+       "      <td>27.12.20.000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0.3  Unnamed: 0.2  Unnamed: 0.1  Unnamed: 0  \\\n",
+       "0             0             0             0           0   \n",
+       "1             1             1             1           1   \n",
+       "2             2             2             2           2   \n",
+       "3             3             3             3           3   \n",
+       "4             4             4             4           4   \n",
+       "\n",
+       "                              product_name  \\\n",
+       "0         Шкаф с электронными компонентами   \n",
+       "1  Реле слаботочное электромагнитное РЭС 9   \n",
+       "2             Реле электромагнитное РЭС 10   \n",
+       "3                  Реле герконовое РЭС93-Т   \n",
+       "4                    Реле герконовое РЭС91   \n",
+       "\n",
+       "                                       product_descr              ktru_code  \\\n",
+       "0  Шкаф с электронными компонентами, Обеспечение ...  26.51.40.000-00000003   \n",
+       "1  Реле слаботочное электромагнитное РЭС 9, Слабо...  27.12.20.000-00000001   \n",
+       "2  Реле электромагнитное РЭС 10, Слаботочные элек...  27.12.20.000-00000001   \n",
+       "3  Реле герконовое РЭС93-Т, Слаботочные электрома...  27.12.20.000-00000001   \n",
+       "4  Реле герконовое РЭС91, Слаботочные электромагн...  27.12.20.000-00000001   \n",
+       "\n",
+       "  ktru_2 ktru_5    ktru_8       ktru_12  train  root  \n",
+       "0     26  26.51  26.51.40  26.51.40.000  False  root  \n",
+       "1     27  27.12  27.12.20  27.12.20.000   True  root  \n",
+       "2     27  27.12  27.12.20  27.12.20.000   True  root  \n",
+       "3     27  27.12  27.12.20  27.12.20.000   True  root  \n",
+       "4     27  27.12  27.12.20  27.12.20.000   True  root  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(5)"
    ]
   }
  ],
